--- a/results.html
+++ b/results.html
@@ -66,17 +66,17 @@
 </div>
 <h2><span class="weight-300" id="h-label"></span></h2>
 <div class="axis">
-    <img id="img-satanic" src="value_images/satanic.png" height="128pt"/>
+    <img id="img-satanic" src="value_images/Satanic.png" height="128pt"/>
     <div class="bar satanic" id="bar-satanic"><div class="text-wrapper" id="satanic"></div></div>
     <div class="bar divine" id="bar-divine"><div class="text-wrapper" id="divine"></div></div>
-    <img id="img-divine" src="value_images/divine.png" height="128pt"/>
+    <img id="img-divine" src="value_images/Divine.png" height="128pt"/>
 </div>
 <h2><span class="weight-300" id="i-label"></span></h2>
 <div class="axis">
-    <img id="img-religious" src="value_images/religious.png" height="128pt"/>
+    <img id="img-religious" src="value_images/Religious.png" height="128pt"/>
     <div class="bar religious" id="bar-religious"><div class="text-wrapper" id="religious"></div></div>
     <div class="bar atheistic" id="bar-atheistic"><div class="text-wrapper" id="atheistic"></div></div>
-    <img id="img-atheistic" src="value_images/atheistic.png" height="128pt"/>
+    <img id="img-atheistic" src="value_images/Atheistic.png" height="128pt"/>
 </div>
 
 <br><br>
