--- a/results.html
+++ b/results.html
@@ -116,7 +116,7 @@
         if (val >= 90) { return "Theocratic " + leftArray[axis] } else
         if (val >= 80) { return "Fundamentalist " + leftArray[axis] } else
         if (val >= 70) { return leftArray[axis] } else
-        if (val >= 60) { return "Secular " + leftArray[axis] } else
+        if (val >= 60) { return "Pro-" + leftArray[axis] } else
         if (val > 40) { return "Neutral" } else
         if (val > 30) { return "Somewhat " + rightArray[axis] } else
         if (val > 20) { return rightArray[axis] } else
