--- a/results.html
+++ b/results.html
@@ -294,7 +294,7 @@
         ctx.fillStyle="#000"
         ctx.font="700 60px Bebas Neue"
         ctx.textAlign="left"
-        ctx.fillText("Religious Values Test v.2", 128, 75)
+        ctx.fillText("Religious Values Test", 128, 75)
         ctx.font="40px Noto Sans Mono"
         ctx.textAlign="right"
 
