--- a/results.html
+++ b/results.html
@@ -295,10 +295,10 @@
         ctx.font="700 60px Bebas Neue"
         ctx.textAlign="left"
         ctx.fillText("Religious Values Test", 128, 75)
-        ctx.font="40px Noto Sans Mono"
+        ctx.font="40px Roboto"
         ctx.textAlign="right"
 
-        ctx.font="50px Noto+Sans+Mono"
+        ctx.font="50px Roboto"
         ctx.textAlign="left"
         if (a  > 20) {ctx.fillText(a + "%", 130, 187.5)}
         if (b     > 20) {ctx.fillText(b + "%", 130, 307.5)}
@@ -320,7 +320,7 @@
         if (h2  > 20) {ctx.fillText(h2 + "%", 670, 1027.5)}
         if (i2  > 20) {ctx.fillText(i2 + "%", 670, 1147.5)}
 
-        ctx.font="300 30px Noto+Sans+Mono"
+        ctx.font="300 30px Roboto"
         ctx.textAlign="center"
         ctx.fillText(document.getElementById("a-label").innerHTML, 400, 125)
         ctx.fillText(document.getElementById("b-label").innerHTML, 400, 245)
