--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <img src="values.png" class="center"></img>
 
 <h2>What is Religious Values?</h2>
-    <p>Religious Values, based off of <a href="https://9axes.github.io/">9axes</a> is a political quiz that attempts to assign percentages on nine different religious axes. You will be presented by a statement, and then you will answer with your opinion on the statement, from <b>Strongly Agree</b> to <b>Strongly Disagree</b>, with each answer slightly affecting your scores. At the end of the quiz, your answers will be compared to the maximum possible for each value, thus giving you a percentage. Answer honestly!</p>
-<h2>What are the nine axes values?</h2>
-    <p>There are nine independent axes, where each has two opposing values assigned to them. They are:</p>
+    <p>Religious Values, based off of <a href="https://9axes.github.io/">9axes</a> is a political quiz that attempts to assign percentages on ten different religious axes. You will be presented by a statement, and then you will answer with your opinion on the statement, from <b>Strongly Agree</b> to <b>Strongly Disagree</b>, with each answer slightly affecting your scores. At the end of the quiz, your answers will be compared to the maximum possible for each value, thus giving you a percentage. Answer honestly!</p>
+<h2>What are the ten axes values?</h2>
+    <p>There are ten independent axes, where each has two opposing values assigned to them. They are:</p>
     <p class="value-description"><b style="color:#a98d0b;">Pro-Catholic</b> vs <b style="color:#a93b0b;">Anti-Catholic</b><br/>
         People who are Pro-Catholic tend to favour traditional Catholic theology, Papal authority and the Catholic Church, whereas people who are Anti-Catholic tend to oppose tradition Catholic theology, Papal authority and Catholic influence.</p>
 
@@ -35,6 +35,9 @@
    <p class="value-description"><b style="color:#efe761;">Pro-Buddhist</b> vs <b style="color:#0ba96f;">Anti-Buddhist</b><br/>
         People who are Pro-Buddhist tend to favour Tibetan Nationalism, the Doctrine of Dukkha and Human Perfection, whereas those who are Anti-Buddhist tend to favour the belief in the flawed nature of humanity, while typically opposing Buddhist idolitry and the doctrine of enlighenment.</p>
 
+   <p class="value-description"><b style="color:#a9520b;">Pro-Hindu</b> vs <b style="color:#687dcd;">Anti-Hindu</b><br/>
+        People who are Pro-Hindu tend to agree with the principles of dharma, kama, artha and moksha whereas those who are Anti-Hindu tend to oppose these principles.</p>
+
    <p class="value-description"><b style="color:#7060b6;">Pro-Pagan</b> vs <b style="color:#eae398;">Anti-Pagan</b><br/>
         People who are Pro-Pagan tend to favour Pantheistic worship, human sacrifices and worship of nature, whereas those who are Anti-Pagan tend to favour Monotheism and worship of a creator rather than creation.</p>
 
@@ -44,13 +47,11 @@
    <p class="value-description"><b style="color:#ffffff;">Atheistic</b> vs <b style="color:#000000;">Religious</b><br/>
         People who are Atheistic tend to favour a materialistic world view, a Secular government, and among extremeists, a crackdown on religious worship, whereas those who are religious tend to favour Moralism, religious worship and, among extremists, Theocracy.</p>
 
-<h2>Bannned Values Test</h2>
-<p>My first test, it is a compass test that can be found <a href="https://bannnedb.github.io/bannned/">here</a></p>
-<h2>Bannned Axes Test</h2>
-<p>My second test, it is an axes test that can be found here <a href="https://bannnedb.github.io/Bannned-Axes/">here</a></p>
+<h2>Bannned Tests</h2>
+<p>All of my tests, chances are you haven't taken them all so check it out <a href="https://bannnedb.github.io/Bannned-Tests/">here</a></p>
 <h2>I don't like my scores!</h2>
     <p>¯\_(ツ)_/¯<br/>
-   Too bad</p>
+   <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Tell me your issues on my support page</a></p>
 <br/>
 <p>Legal notice: The 8values project's license grants the rights to "modify, merge, publish, distribute" the software as long as "The above copyright notice and this permission notice shall be included in
 all copies or substantial portions of the Software." The included notice can be found <a href="LICENSE">here</a>. This project is released under the same license.</p>
