--- a/results.html
+++ b/results.html
@@ -62,7 +62,7 @@
     <img id="img-prohindu" src="value_images/Pro Hindu.png" height="128pt"/>
     <div class="bar prohindu" id="bar-prohindu"><div class="text-wrapper" id="prohindu"></div></div>
     <div class="bar antihindu" id="bar-antihindu"><div class="text-wrapper" id="antihindu"></div></div>
-    <img id="img-antihindu" src="value_images/Anti Hindu.png" height="128pt"/>
+    <img id="img-antihindu" src="value_images/Anti-Hindu.png" height="128pt"/>
 </div>
 <h2><span class="weight-300" id="g-label"></span></h2>
 <div class="axis">
