--- a/results.html
+++ b/results.html
@@ -164,7 +164,7 @@
     setBarValue("islamophobic", e2)
     setBarValue("buddhist", f)
     setBarValue("antibuddhist", f2)
-    setBarValue("hindu", x)
+    setBarValue("prohindu", x)
     setBarValue("antihindu", x2)
     setBarValue("pagan", g)
     setBarValue("antipagan", g2)
@@ -245,9 +245,9 @@
         ctx.drawImage(img, 20, 720, 100, 100)
         img = document.getElementById("img-antibuddhist")
         ctx.drawImage(img, 680, 720, 100, 100)
-        img = document.getElementById("img-hindu")
+        img = document.getElementById("img-prohindu")
         ctx.drawImage(img, 20, 840, 100, 100)
-        img = document.getElementById("img-hindu")
+        img = document.getElementById("img-antihindu")
         ctx.drawImage(img, 680, 840, 100, 100)
         img = document.getElementById("img-pagan")
         ctx.drawImage(img, 20, 960, 100, 100)
