--- a/results.html
+++ b/results.html
@@ -314,6 +314,14 @@
         ctx.fillRect(120, 1214, 5.6*i1-2, 72)
         ctx.fillStyle="#000000" 
         ctx.fillRect(682-5.6*i2, 1214, 5.6*i2-2, 72)
+        ctx.fillStyle="#222222"
+        ctx.font="700 30px Bebas Neue"
+        ctx.textAlign="left"
+        ctx.fillText("Version 3", 20, 90)
+        ctx.fillStyle="#222222"
+        ctx.font="700 30px Bebas Neue"
+        ctx.textAlign="right"
+        ctx.fillText("14/03/22", 780, 90)
         ctx.fillStyle="#000"
         ctx.font="700 60px Bebas Neue"
         ctx.textAlign="left"
