--- a/results.html
+++ b/results.html
@@ -348,7 +348,7 @@
         if (d2 > 40) {ctx.fillText(d2 + "%", 670, 547.5)}
         if (e2 > 40) {ctx.fillText(e2 + "%", 670, 667.5)}
         if (f2 > 40) {ctx.fillText(f2 + "%", 670, 787.5)}
-        if (x  > 40) {ctx.fillText(x2 + "%", 670, 907.5)}
+        if (x2 > 40) {ctx.fillText(x2 + "%", 670, 907.5)}
         if (g2 > 40) {ctx.fillText(g2 + "%", 670, 1027.5)}
         if (h2 > 40) {ctx.fillText(h2 + "%", 670, 1147.5)}
         if (i2 > 40) {ctx.fillText(i2 + "%", 670, 1267.5)}
@@ -361,10 +361,10 @@
         ctx.fillText(document.getElementById("d-label").innerHTML, 400, 485)
         ctx.fillText(document.getElementById("e-label").innerHTML, 400, 605)
         ctx.fillText(document.getElementById("f-label").innerHTML, 400, 725)
-        ctx.fillText(document.getElementById("x-label").innerHTML, 400, 725)
-        ctx.fillText(document.getElementById("g-label").innerHTML, 400, 845)
-        ctx.fillText(document.getElementById("h-label").innerHTML, 400, 965)
-        ctx.fillText(document.getElementById("i-label").innerHTML, 400, 1085)
+        ctx.fillText(document.getElementById("x-label").innerHTML, 400, 845)
+        ctx.fillText(document.getElementById("g-label").innerHTML, 400, 965)
+        ctx.fillText(document.getElementById("h-label").innerHTML, 400, 1085)
+        ctx.fillText(document.getElementById("i-label").innerHTML, 400, 1205)
     }
     </script>
 
