--- a/results.html
+++ b/results.html
@@ -219,7 +219,7 @@
         var c = document.getElementById("banner")
         var ctx = c.getContext("2d")
         ctx.fillStyle = "#777"
-        ctx.fillRect(0,0,800,1320)
+        ctx.fillRect(0,0,800,1440)
 
         img = document.getElementById("img-catholic")
         ctx.drawImage(img, 20, 120, 100, 100);
@@ -326,7 +326,10 @@
         ctx.font="700 60px Bebas Neue"
         ctx.textAlign="left"
         ctx.fillText("Religious Values Test", 128, 75)
-        ctx.font="40px Roboto"
+        ctx.font="700 30px Bebas Neue"
+        ctx.textAlign="right"
+        ctx.fillText("<h2 class="ideology">Closest Match: <span class="weight-300" id="ideology-label"></span></h1>")
+        ctx.font="700 30px Bebas Neue"
         ctx.textAlign="right"
 
         ctx.font="50px Roboto"
