--- a/results.html
+++ b/results.html
@@ -328,7 +328,7 @@
         ctx.fillText("Religious Values Test", 128, 75)
         ctx.font="700 30px Bebas Neue"
         ctx.textAlign="right"
-        ctx.fillText("<h2 class="ideology">Closest Match: <span class="weight-300" id="ideology-label"></span></h1>")
+        <h2 class="ideology">Closest Match: <span class="weight-300" id="ideology-label"></span></h1>
         ctx.font="700 30px Bebas Neue"
         ctx.textAlign="right"
 
