--- a/results.html
+++ b/results.html
@@ -92,7 +92,7 @@
 
 <br><br>
 
-<canvas id="banner" width=800 height=1440 style="font-family:Noto+Sans+Mono"></canvas>
+<canvas id="banner" width=800 height=1380 style="font-family:Noto+Sans+Mono"></canvas>
 <button class="button" onclick="location.href='index.html';" style="background-color: #333;">Back</button> <br>
 <script>
     function getQueryVariable(variable)
@@ -219,7 +219,7 @@
         var c = document.getElementById("banner")
         var ctx = c.getContext("2d")
         ctx.fillStyle = "#777"
-        ctx.fillRect(0,0,800,1440)
+        ctx.fillRect(0,0,800,1380)
 
         img = document.getElementById("img-catholic")
         ctx.drawImage(img, 20, 120, 100, 100);
@@ -328,9 +328,9 @@
         ctx.fillText("Religious Values Test", 128, 75)
         ctx.font="700 30px Bebas Neue"
         ctx.textAlign="right"
-        ctx.fillText(ideology, 20, 140)
+        ctx.fillText(ideology, 0, 0)
         ctx.font="700 30px Bebas Neue"
-        ctx.textAlign="right"
+        ctx.textAlign="center"
 
         ctx.font="50px Roboto"
         ctx.textAlign="left"
