--- a/results.html
+++ b/results.html
@@ -329,7 +329,7 @@
         ctx.font="700 30px Bebas Neue"
         ctx.textAlign="right"
         ctx.fillText(ideology, 400, 1320)
-        ctx.font="700 40px Bebas Neue"
+        ctx.font="700 60px Noto+Sans+Mono"
         ctx.textAlign="center"
 
         ctx.font="50px Roboto"
