--- a/results.html
+++ b/results.html
@@ -328,7 +328,7 @@
         ctx.fillText("Religious Values Test", 128, 75)
         ctx.font="700 60px Noto+Sans+Mono"
         ctx.textAlign="center"
-        ctx.fillText(ideology, 400, 1320)
+        ctx.fillText(Closest Match: ideology, 400, 1380)
 
         ctx.font="50px Roboto"
         ctx.textAlign="left"
