--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <hr>
 <button class="button" onclick="location.href='instructions.html';" style="font-size:36pt;">Click here to begin!</button>
 <img src="values.png" class="center"></img>
+<button class="button" onclick="location.href='https://bannnedb.github.io/Bannned-Tests/';" style="font-size:24pt;">My Other Tests</button>
 
 <h2>What is Religious Values?</h2>
     <p>Religious Values, based off of <a href="https://9axes.github.io/">9axes</a> is a political quiz that attempts to assign percentages on ten different religious axes. You will be presented by a statement, and then you will answer with your opinion on the statement, from <b>Strongly Agree</b> to <b>Strongly Disagree</b>, with each answer slightly affecting your scores. At the end of the quiz, your answers will be compared to the maximum possible for each value, thus giving you a percentage. Answer honestly!</p>
