--- a/results.html
+++ b/results.html
@@ -324,8 +324,8 @@
         ctx.fillText("17/03/22", 780, 100)
         ctx.fillStyle="#000"
         ctx.font="700 60px Bebas Neue"
-        ctx.textAlign="left"
-        ctx.fillText("Religious Values Test", 128, 75)
+        ctx.textAlign="center"
+        ctx.fillText("Religious Values Test", 400, 75)
         ctx.font="700 60px Roboto"
         ctx.textAlign="center"
         ctx.fillText(ideology, 400, 1390)
