--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<div class="explanation_bg">
+<h1><b style="color:#540505;">Warning! Some users may find the following pages disturbing and/or offensive.</b></h1>
+</div>
+    
 <h1>Religious Values Test</h1>
 <hr>
 <button class="button" onclick="location.href='instructions.html';" style="font-size:36pt;">Click here to begin!</button>
